update - google maps link, icones on firefox, bug on safari

--- a/assets/sass/elements/modal.scss
+++ b/assets/sass/elements/modal.scss
@@ -3,8 +3,9 @@
     top: 85px;
     right: 0;
     padding: 10px;
-    background: $cWhite;
+    background: #83bc15;
     border-radius: 3px 0 0 3px;
+    color: $cWhite;
     box-shadow: 1px 2px 10px rgba($cBlack, 0.3);
     z-index: 999;
 }
